VQ-2948: Implementation of Dynamic Screens - Quotations Documents

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1280,10 +1280,12 @@
         "basic_details": "基本详情",
         "branch": "分行",
         "branch_required": "分行是必填项",
+        "choose_file": "选择文件",
         "citizenship": "国籍",
         "client": "客户",
         "coinsurance": "共保",
         "coinsurer_share": "共保人份额",
+        "completed": "已完成",
         "contact_details": "联系详情",
         "continue": "继续",
         "country": "国家",
@@ -1300,6 +1302,7 @@
         "email_address": "电子邮箱地址",
         "escalation": "递增",
         "escalation_rate": "递增率",
+        "exempt": "免除",
         "existing_client": "现有客户",
         "female": "女性",
         "first_name": "名字",
@@ -1374,6 +1377,7 @@
         "title": "称谓",
         "type_of_employment": "就业类型",
         "town": "城镇",
+        "upload_later": "稍后上传",
         "wealth_aml_details": "财富反洗钱详情",
         "with_effect_from": "生效日期",
         "with_effect_to": "终止日期",
