--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1281,10 +1281,12 @@
         "basic_details": "Grundlegende Angaben",
         "branch": "Filiale",
         "branch_required": "Filiale ist erforderlich",
+        "choose_file": "Datei auswählen",
         "citizenship": "Staatsangehörigkeit",
         "client": "Kunde",
         "coinsurance": "Mitversicherung",
         "coinsurer_share": "Anteil des Mitversicherers",
+        "completed": "Abgeschlossen",
         "contact_details": "Kontaktdaten",
         "continue": "Weiter",
         "country": "Land",
@@ -1301,6 +1303,7 @@
         "email_address": "E-Mail-Adresse",
         "escalation": "Eskalation",
         "escalation_rate": "Eskalationsrate",
+        "exempt": "Befreit",
         "existing_client": "Bestehender Kunde",
         "female": "Weiblich",
         "first_name": "Vorname",
@@ -1375,6 +1378,7 @@
         "title": "Titel",
         "type_of_employment": "Beschäftigungsart",
         "town": "Stadt",
+        "upload_later": "Später hochladen",
         "wealth_aml_details": "Vermögens-AML-Details",
         "with_effect_from": "Gültig ab",
         "with_effect_to": "Gültig bis",
