--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1306,10 +1306,12 @@
         "basic_details": "Basic Details",
         "branch": "Branch",
         "branch_required": "Branch is required",
+        "choose_file": "Choose File",
         "citizenship": "Citizenship",
         "client": "Client",
         "coinsurance": "Coinsurance",
         "coinsurer_share": "Coinsurer Share",
+        "completed": "Completed",
         "contact_details": "Contact Details",
         "continue": "Continue",
         "country": "Country",
@@ -1326,6 +1328,7 @@
         "email_address": "Email Address",
         "escalation": "Escalation",
         "escalation_rate": "Escalation Rate",
+        "exempt": "Exempt",
         "existing_client": "Existing Client",
         "female": "Female",
         "first_name": "First Name",
@@ -1400,6 +1403,7 @@
         "title": "Title",
         "type_of_employment": "Type of Employment",
         "town": "Town",
+        "upload_later": "Upload Later",
         "wealth_aml_details": "Wealth AML details",
         "with_effect_from": "With Effect From",
         "with_effect_to": "With Effect To",
