--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1280,10 +1280,12 @@
         "basic_details": "Detalles básicos",
         "branch": "Sucursal",
         "branch_required": "La sucursal es obligatoria",
+        "choose_file": "Elegir archivo",
         "citizenship": "Ciudadanía",
         "client": "Cliente",
         "coinsurance": "Coaseguro",
         "coinsurer_share": "Participación del coasegurador",
+        "completed": "Completado",
         "contact_details": "Detalles de contacto",
         "continue": "Continuar",
         "country": "País",
@@ -1300,6 +1302,7 @@
         "email_address": "Dirección de correo electrónico",
         "escalation": "Escalación",
         "escalation_rate": "Tasa de escalación",
+        "exempt": "Exento",
         "existing_client": "Cliente existente",
         "female": "Femenino",
         "first_name": "Nombre",
@@ -1374,6 +1377,7 @@
         "title": "Título",
         "type_of_employment": "Tipo de empleo",
         "town": "Ciudad",
+        "upload_later": "Subir más tarde",
         "wealth_aml_details": "Detalles AML sobre patrimonio",
         "with_effect_from": "Con efecto desde",
         "with_effect_to": "Con efecto hasta",
