--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1281,10 +1281,12 @@
         "basic_details": "Détails de base",
         "branch": "Agence",
         "branch_required": "L'agence est requise",
+        "choose_file": "Choisir un fichier",
         "citizenship": "Nationalité",
         "client": "Client",
         "coinsurance": "Coassurance",
         "coinsurer_share": "Part du coassureur",
+        "completed": "Terminé",
         "contact_details": "Détails de contact",
         "continue": "Continuer",
         "country": "Pays",
@@ -1301,6 +1303,7 @@
         "email_address": "Adresse e-mail",
         "escalation": "Escalade",
         "escalation_rate": "Taux d'escalade",
+        "exempt": "Exempté",
         "existing_client": "Client existant",
         "female": "Femme",
         "first_name": "Prénom",
@@ -1375,6 +1378,7 @@
         "title": "Titre",
         "type_of_employment": "Type d'emploi",
         "town": "Ville",
+        "upload_later": "Télécharger plus tard",
         "wealth_aml_details": "Détails AML sur la richesse",
         "with_effect_from": "En vigueur à partir du",
         "with_effect_to": "En vigueur jusqu'au",
