--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1282,10 +1282,12 @@
         "basic_details": "Maelezo ya Msingi",
         "branch": "Tawi",
         "branch_required": "Tawi linahitajika",
+        "choose_file": "Chagua Faili",
         "citizenship": "Uraia",
         "client": "Mteja",
         "coinsurance": "Bima ya Pamoja",
         "coinsurer_share": "Sehemu ya Mshirika wa Bima",
+        "completed": "Imekamilika",
         "contact_details": "Maelezo ya Mawasiliano",
         "continue": "Endelea",
         "country": "Nchi",
@@ -1302,6 +1304,7 @@
         "email_address": "Barua Pepe",
         "escalation": "Ongezeko",
         "escalation_rate": "Kiwango cha Ongezeko",
+        "exempt": "Imeondolewa",
         "existing_client": "Mteja Aliyepo",
         "female": "Mwanamke",
         "first_name": "Jina la Kwanza",
@@ -1376,6 +1379,7 @@
         "title": "Kichwa",
         "type_of_employment": "Aina ya Ajira",
         "town": "Mji",
+        "upload_later": "Pakia Baadaye",
         "wealth_aml_details": "Maelezo ya AML ya Mali",
         "with_effect_from": "Kuanzia Tarehe",
         "with_effect_to": "Hadi Tarehe",
