VQ-3160/Consolidate member and admin service request screens

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -205,7 +205,9 @@
     "general": "General",
     "life_ind": "Life Individual",
     "life_group": "Life Group",
-    "pension": "Pension"
+    "pension": "Pension",
+    "new_service_request": "New service request",
+    "view_service_requests": "View service requests"
   },
   "crm": {
     "activity": "Activity",
