VQ-3161/Service request selective rendering and multilingual

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1709,72 +1709,46 @@
         "completed": "Completed"
       },
       "service_request": {
-        "admin": {
-          "dashboard": {
-            "service_requests_dashboard": "Service requests dashboard",
-            "new_service_request": "New service request",
-            "request_id": "Request ID",
-            "category": "Category",
-            "category_type": "Category type",
-            "status": "Status",
-            "date_submitted": "Date submitted",
-            "policy_number": "Policy number",
-            "assigned_to": "Assigned to"
-          },
-          "service_req": {
-            "service_request": "Service request",
-            "category": "Category",
-            "category_type": "Category type",
-            "policy": "Policy",
-            "policy_members": "Policy members",
-            "preferred_contact_method": "Preferred contact method",
-            "preferred_contact_time": "Preferred contact time",
-            "description": "Description",
-            "documents": "Documents",
-            "upload_file": "Upload file",
-            "choose_file": "Choose file",
-            "submit_request": "Submit request"
-          },
-          "logs": {
-            "service_request_logs": "Service request logs",
-            "request_number": "Request number",
-            "request_status": "Request status",
-            "request_date": "Request date",
-            "policy": "Policy",
-            "category_type": "Category type",
-            "policy_member": "Policy member",
-            "category": "Category",
-            "policy_number": "Policy number",
-            "days_lapsed": "Days lapsed",
-            "notifications": "Notifications",
-            "new_message": "New message",
-            "attach_file": "Attach file",
-            "submit": "Submit"
-          }
-        },
-        "member": {
-          "my_service_requests": "My service requests",
-          "new_request": "New request",
-          "request_number": "Request number",
-          "category": "category",
-          "summary": "Summary",
-          "date": "Date",
-          "status": "Status",
-          "due_date": "Due date",
-          "lapsed_date": "Lapsed date",
-          "service_request_summary": "Service request summary",
-          "category_type": "Category type",
-          "policy": "Policy",
-          "policy_members": "Policy members",
-          "description": "Description",
-          "service_request": "Service request",
-          "preferred_contact_method": "Preferred contact method",
-          "preferred_contact_time": "Preferred contact time",
-          "invoice_number": "Invoice number",
-          "upload_file": "Upload file",
-          "choose_file": "Choose file",
-          "submit": "Submit"
-        }
+        "service_request": "Service Request",
+        "category": "Category",
+        "category_type": "Category Type",
+        "policy": "Policy",
+        "preferred_contact_method": "Preferred Contact Method",
+        "preferred_contact_time": "Preferred Contact Time",
+        "description": "Description",
+        "upload_file": "Upload File",
+        "choose_file": "Choose File",
+        "submit_request": "Submit Request",
+        "policy_members": "Policy Members",
+        "due_date": "Due Date",
+        "summary": "Summary",
+        "service_request_number": "Service Request Number",
+        "policy_number": "Policy number",
+        "policy_member": "Policy Member",
+        "contact_method": "Contact Method",
+        "contact_time": "Contact Time",
+        "status": "Status",
+        "last_updated_date": "Last Updated Date",
+        "actions": "Actions",
+        "my_service_requests": "My Service Requests",
+        "filter_by": "Filter by",
+        "greater_than": "Greater Than",
+        "less_than": "Less Than",
+        "equals": "Equals",
+        "new_service_request": "New Service Request",
+        "date_submitted": "Date submitted",
+        "solution": "Solution",
+        "assigned_to": "Assigned to",
+        "service_request_summary": "Service request summary",
+        "request_number": "Request number",
+        "request_status": "Request status",
+        "request_date": "Request date",
+        "notifications": "Notifications",
+        "new_message": "New message",
+        "attach_file": "Attach file",
+        "submit": "Submit",
+        "days_lapsed": "Days lapsed",
+        "request_id": "Request ID"
       }
     }
   },
