crm updated routing and multilingual for service desk components

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -193,7 +193,12 @@
     "general": "一般",
     "life_ind": "个人寿险",
     "life_group": "团体寿险",
-    "pension": "养老金"
+    "pension": "养老金",
+    "Request Tracking": "请求跟踪",
+    "Request Report": "请求报告",
+    "Escalations": "升级",
+    "Request Categories": "请求类别",
+    "Request Status": "请求状态"
   },
   "crm": {
     "activity": "活动",
@@ -1910,5 +1915,48 @@
     "attributeMinValue": "属性最小值",
     "attributeMaxValue": "属性最大值",
     "attributeFixedValue": "属性固定值"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "服务请求状态",
+    "statusName": "状态名称",
+    "shortDescription": "简短描述",
+    "mainStatus": "主要状态",
+    "serviceRequestCategories": "服务请求类别",
+    "description": "描述",
+    "defaultUser": "默认用户",
+    "incidents": "事件",
+    "name": "名称",
+    "validityInDays": "有效期（天）",
+    "escalatedTo": "升级至",
+    "serviceRequestTracking": "服务请求跟踪",
+    "accountName": "账户名称",
+    "requestType": "请求类型",
+    "source": "来源",
+    "policyNumber": "保单号码",
+    "creationDate": "创建日期",
+    "summary": "摘要",
+    "dueDate": "到期日期",
+    "status": "状态",
+    "assignee": "受让人",
+    "closedByAssignee": "由受让人关闭",
+    "closedByInitiator": "由发起人关闭",
+    "communicationMode": "通信模式",
+    "referenceNumber": "参考编号",
+    "comments": "评论",
+    "physicalAddress": "实际地址",
+    "email": "电子邮件",
+    "solutionSMSNumber": "解决方案短信号码",
+    "owner": "所有者",
+    "requestStatus": "请求状态",
+    "requestOwner": "请求所有者",
+    "accType": "账户类型",
+    "serviceRequest": "服务请求",
+    "serviceDesk": "服务台",
+    "entity": "实体",
+    "searchCriteria": "搜索条件",
+    "inputSearch": "输入搜索",
+    "serviceProviderType": "服务提供商类型",
+    "accDetails": "账户详情",
+    "openRequests": "开放请求"
   }
 }
