--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -193,7 +193,12 @@
     "general": "Allgemein",
     "life_ind": "Leben individuell",
     "life_group": "Leben Gruppe",
-    "pension": "Rente"
+    "pension": "Rente",
+    "Request Tracking": "Anfragenverfolgung",
+    "Request Report": "Anfragebericht",
+    "Escalations": "Eskalationen",
+    "Request Categories": "Anfragekategorien",
+    "Request Status": "Anfragestatus"
   },
   "crm": {
     "activity": "Activiteit",
@@ -1911,5 +1916,48 @@
     "attributeMinValue": "Attribut-Mindestwert",
     "attributeMaxValue": "Attribut-Höchstwert",
     "attributeFixedValue": "Fester Attributwert"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "Servicestatus der Anfrage",
+    "statusName": "Statusname",
+    "shortDescription": "Kurzbeschreibung",
+    "mainStatus": "Hauptstatus",
+    "serviceRequestCategories": "Serviceanfragekategorien",
+    "description": "Beschreibung",
+    "defaultUser": "Standardbenutzer",
+    "incidents": "Vorfälle",
+    "name": "Name",
+    "validityInDays": "Gültigkeit in Tagen",
+    "escalatedTo": "Eskaliert zu",
+    "serviceRequestTracking": "Anfrageverfolgung",
+    "accountName": "Kontoname",
+    "requestType": "Anfragetyp",
+    "source": "Quelle",
+    "policyNumber": "Policennummer",
+    "creationDate": "Erstellungsdatum",
+    "summary": "Zusammenfassung",
+    "dueDate": "Fälligkeitsdatum",
+    "status": "Status",
+    "assignee": "Zugewiesener",
+    "closedByAssignee": "Vom Beauftragten geschlossen",
+    "closedByInitiator": "Vom Initiator geschlossen",
+    "communicationMode": "Kommunikationsmodus",
+    "referenceNumber": "Referenznummer",
+    "comments": "Kommentare",
+    "physicalAddress": "Physische Adresse",
+    "email": "E-Mail",
+    "solutionSMSNumber": "Lösungs-SMS-Nummer",
+    "owner": "Inhaber",
+    "requestStatus": "Anfragestatus",
+    "requestOwner": "Anfrageinhaber",
+    "accType": "Kontotyp",
+    "serviceRequest": "Serviceanfrage",
+    "serviceDesk": "Service-Desk",
+    "entity": "Entität",
+    "searchCriteria": "Suchkriterien",
+    "inputSearch": "Eingabesuche",
+    "serviceProviderType": "Dienstanbietertyp",
+    "accDetails": "Kontodetails",
+    "openRequests": "Offene Anfragen"
   }
 }
