--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -207,7 +207,12 @@
     "life_group": "Life Group",
     "pension": "Pension",
     "new_service_request": "New service request",
-    "view_service_requests": "View service requests"
+    "view_service_requests": "View service requests",
+    "Request Tracking": "Request Tracking",
+    "Request Report": "Request Report",
+    "Escalations": "Escalations",
+    "Request Categories": "Request Categories",
+    "Request Status": "Request Status"
   },
   "crm": {
     "activity": "Activity",
@@ -2248,5 +2253,48 @@
     "attributeMinValue":"Attribute min value",
     "attributeMaxValue": "Attribute max value",
     "attributeFixedValue": "Attribute fixed value"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "Service request status",
+    "statusName": "Status Name",
+    "shortDescription": "Short Description",
+    "mainStatus": "Main Status",
+    "serviceRequestCategories": "Service request categories",
+    "description": "Description",
+    "defaultUser": "Default User",
+    "incidents": "Incidents",
+    "name": "Name",
+    "validityInDays": "Validity in days",
+    "escalatedTo": "Escalated To",
+    "serviceRequestTracking": "Request tracking",
+    "accountName": "Account name",
+    "requestType": "Request type",
+    "source": "Source",
+    "policyNumber": "Policy number",
+    "creationDate": "Creation date",
+    "summary": "Summary",
+    "dueDate": "Due date",
+    "status": "Status",
+    "assignee": "Assignee",
+    "closedByAssignee": "Closed by assignee",
+    "closedByInitiator": "Closed by initiator",
+    "communicationMode": "Communication mode",
+    "referenceNumber": "Reference number",
+    "comments": "Comments",
+    "physicalAddress": "Physical address",
+    "email": "Email",
+    "solutionSMSNumber": "Solution SMS number",
+    "owner": "Owner",
+    "requestStatus": "Request status",
+    "requestOwner":"Request owner",
+    "accType": "Account type",
+    "serviceRequest": "Service request",
+    "serviceDesk": "Service Desk",
+    "entity": "Entity",
+    "searchCriteria": "Search Criteria",
+    "inputSearch": "Input Search",
+    "serviceProviderType": "Service provider type",
+    "accDetails": "Account Details",
+    "openRequests": "Open Requests"
   }
 }
