--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -193,7 +193,12 @@
     "general": "General",
     "life_ind": "Vida individual",
     "life_group": "Vida en grupo",
-    "pension": "Pensión"
+    "pension": "Pensión",
+    "Request Tracking": "Seguimiento de solicitud",
+    "Request Report": "Informe de solicitud",
+    "Escalations": "Escalaciones",
+    "Request Categories": "Categorías de solicitud",
+    "Request Status": "Estado de la solicitud"
   },
   "crm": {
     "activity": "Actividad",
@@ -2209,5 +2214,48 @@
     "attributeMinValue": "Valor mínimo del atributo",
     "attributeMaxValue": "Valor máximo del atributo",
     "attributeFixedValue": "Valor fijo del atributo"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "Estado de la solicitud de servicio",
+    "statusName": "Nombre del estado",
+    "shortDescription": "Descripción corta",
+    "mainStatus": "Estado principal",
+    "serviceRequestCategories": "Categorías de solicitud de servicio",
+    "description": "Descripción",
+    "defaultUser": "Usuario predeterminado",
+    "incidents": "Incidentes",
+    "name": "Nombre",
+    "validityInDays": "Validez en días",
+    "escalatedTo": "Escalado a",
+    "serviceRequestTracking": "Seguimiento de solicitudes",
+    "accountName": "Nombre de la cuenta",
+    "requestType": "Tipo de solicitud",
+    "source": "Fuente",
+    "policyNumber": "Número de póliza",
+    "creationDate": "Fecha de creación",
+    "summary": "Resumen",
+    "dueDate": "Fecha de vencimiento",
+    "status": "Estado",
+    "assignee": "Asignado",
+    "closedByAssignee": "Cerrado por asignado",
+    "closedByInitiator": "Cerrado por iniciador",
+    "communicationMode": "Modo de comunicación",
+    "referenceNumber": "Número de referencia",
+    "comments": "Comentarios",
+    "physicalAddress": "Dirección física",
+    "email": "Correo electrónico",
+    "solutionSMSNumber": "Número de SMS de solución",
+    "owner": "Propietario",
+    "requestStatus": "Estado de la solicitud",
+    "requestOwner": "Propietario de la solicitud",
+    "accType": "Tipo de cuenta",
+    "serviceRequest": "Solicitud de servicio",
+    "serviceDesk": "Mesa de servicio",
+    "entity": "Entidad",
+    "searchCriteria": "Criterios de búsqueda",
+    "inputSearch": "Búsqueda de entrada",
+    "serviceProviderType": "Tipo de proveedor de servicios",
+    "accDetails": "Detalles de la cuenta",
+    "openRequests": "Solicitudes abiertas"
   }
 }
