--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -193,7 +193,12 @@
     "general": "Général",
     "life_ind": "Vie individuelle",
     "life_group": "Vie de groupe",
-    "pension": "Pension"
+    "pension": "Pension",
+    "Request Tracking": "Suivi des demandes",
+    "Request Report": "Rapport de demande",
+    "Escalations": "Escalades",
+    "Request Categories": "Catégories de demande",
+    "Request Status": "Statut de la demande"
   },
   "crm": {
     "activity": "Activité",
@@ -2210,5 +2215,48 @@
     "attributeMinValue": "Valeur minimale de l'attribut",
     "attributeMaxValue": "Valeur maximale de l'attribut",
     "attributeFixedValue": "Valeur fixe de l'attribut"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "Statut de la demande de service",
+    "statusName": "Nom du statut",
+    "shortDescription": "Brève description",
+    "mainStatus": "Statut principal",
+    "serviceRequestCategories": "Catégories de demande de service",
+    "description": "Description",
+    "defaultUser": "Utilisateur par défaut",
+    "incidents": "Incidents",
+    "name": "Nom",
+    "validityInDays": "Validité en jours",
+    "escalatedTo": "Escaladé à",
+    "serviceRequestTracking": "Suivi des demandes",
+    "accountName": "Nom du compte",
+    "requestType": "Type de demande",
+    "source": "Source",
+    "policyNumber": "Numéro de police",
+    "creationDate": "Date de création",
+    "summary": "Résumé",
+    "dueDate": "Date d'échéance",
+    "status": "Statut",
+    "assignee": "Attributaire",
+    "closedByAssignee": "Fermé par l'attributaire",
+    "closedByInitiator": "Fermé par l'initiateur",
+    "communicationMode": "Mode de communication",
+    "referenceNumber": "Numéro de référence",
+    "comments": "Commentaires",
+    "physicalAddress": "Adresse physique",
+    "email": "Email",
+    "solutionSMSNumber": "Numéro SMS de solution",
+    "owner": "Propriétaire",
+    "requestStatus": "Statut de la demande",
+    "requestOwner": "Propriétaire de la demande",
+    "accType": "Type de compte",
+    "serviceRequest": "Demande de service",
+    "serviceDesk": "Bureau de Service",
+    "entity": "Entité",
+    "searchCriteria": "Critères de Recherche",
+    "inputSearch": "Recherche de Saisie",
+    "serviceProviderType": "Type de prestataire de service",
+    "accDetails": "Détails du Compte",
+    "openRequests": "Requêtes Ouvertes"
   }
 }
