--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -193,7 +193,12 @@
     "general": "Jumla",
     "life_ind": "Bima ya Maisha ya Mtu Binafsi",
     "life_group": "Bima ya Maisha ya Kundi",
-    "pension": "Pensheni"
+    "pension": "Pensheni",
+    "Request Tracking": "Ufuatiliaji wa Ombi",
+    "Request Report": "Ripoti ya Ombi",
+    "Escalations": "Kuinua",
+    "Request Categories": "Aina za Ombi",
+    "Request Status": "Hali ya Ombi"
   },
   "crm": {
     "activity": "Shughuli",
@@ -1912,5 +1917,48 @@
     "attributeMinValue": "Thamani ya chini ya sifa",
     "attributeMaxValue": "Thamani ya juu ya sifa",
     "attributeFixedValue": "Thamani ya kudumu ya sifa"
+  },
+  "serviceDesk": {
+    "serviceRequestStatus": "Hali ya ombi la huduma",
+    "statusName": "Jina la hali",
+    "shortDescription": "Maelezo mafupi",
+    "mainStatus": "Hali kuu",
+    "serviceRequestCategories": "Aina za ombi la huduma",
+    "description": "Maelezo",
+    "defaultUser": "Mtumiaji wa awali",
+    "incidents": "Matukio",
+    "name": "Jina",
+    "validityInDays": "Uhalali kwa siku",
+    "escalatedTo": "Imepandishwa kwa",
+    "serviceRequestTracking": "Ufuatiliaji wa ombi",
+    "accountName": "Jina la akaunti",
+    "requestType": "Aina ya ombi",
+    "source": "Chanzo",
+    "policyNumber": "Nambari ya sera",
+    "creationDate": "Tarehe ya kuundwa",
+    "summary": "Muhtasari",
+    "dueDate": "Tarehe ya mwisho",
+    "status": "Hali",
+    "assignee": "Mpe wa kazi",
+    "closedByAssignee": "Imefungwa na mteule",
+    "closedByInitiator": "Imefungwa na mwanzilishi",
+    "communicationMode": "Njia ya mawasiliano",
+    "referenceNumber": "Nambari ya kumbukumbu",
+    "comments": "Maoni",
+    "physicalAddress": "Anwani ya kimwili",
+    "email": "Barua pepe",
+    "solutionSMSNumber": "Nambari ya SMS ya suluhisho",
+    "owner": "Mmiliki",
+    "requestStatus": "Hali ya ombi",
+    "requestOwner": "Mmiliki wa ombi",
+    "accType": "Aina ya akaunti",
+    "serviceRequest": "Ombi la huduma",
+    "serviceDesk": "Dawati la Huduma",
+    "entity": "Kipengele",
+    "searchCriteria": "Vigezo vya Utafutaji",
+    "inputSearch": "Ingiza Utafutaji",
+    "serviceProviderType": "Aina ya mtoa huduma",
+    "accDetails": "Maelezo ya Akaunti",
+    "openRequests": "Maombi Yaliyofunguliwa"
   }
 }
